# python_labs

./: .coverage  README.md  pyproject.toml  students_new.csv
aboba/: aboba3
data/: input.txt
data/lab08/: students_input.json  students_output.json
data/samples/: people.csv  people.json
src/: test1.py
src/data/lab09/: students (1).csv  students.csv
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: B.py
src/lab04/: B.py  C:\Users\First\Documents\GitHub\python_labs\src\data\check.csv  C:\Users\First\Documents\GitHub\python_labs\src\data\check_empty.csv  io_txt_csv.py  text_report.py
src/lab05/: C:\Users\eniko\Gitrep\python_labs\data\samples\cities.csv  C:\Users\eniko\Gitrep\python_labs\data\samples\people.json  CSV_XLSX.py  JSON_CSV.py  samples.py
src/lab06/: CLI_convert.py  CLI_text.py
src/lab08/: main.py  models.py  serialize.py  students.json  Задание A.py  Задание B.py
src/lab09/: group.py  testlab09.py
src/lab10/: linked_list.py  structures.py
src/lib/: A.py  io_txt_csv.py  main.py  matrix.py  text.py  text_report.py  text_stats.py
src/Лабораторная работа №1/: №1.py  №2.py  №3.py  №4.py  №5.py
tests/: test_json_csv.py  test_text.py
